# OpenGLViewer

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  phong.frag  phong.vert  vertex.glsl
src/: main.cpp
src/application/: Application.cpp  Application.h
src/application/camera/: Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  GameCameraControl.cpp  GameCameraControl.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  TrackBallController.cpp  TrackBallController.h
src/glframework/: Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  core.h  shader.cpp  shader.h  texture.cpp  texture.h
src/glframework/light/: ambientLight.cpp  ambientLight.h  directionLight.cpp  directionLight.h  light.cpp  light.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
src/glframework/material/: material.cpp  material.h  phongMaterial.cpp  phongMaterial.h
src/glframework/renderer/: renderer.cpp  renderer.h
src/glframework/tools/: tools.cpp  tools.h
